fixed menu padding on mobile

--- a/index.css
+++ b/index.css
@@ -123,6 +123,7 @@ footer {
   
   .menu {
     margin: 0;
+    padding-left: 0;
   }
 
   .menu li {
